# openbox

./: .cvsignore  .gitignore  .svnignore  AUTHORS  BUGS  CHANGELOG  CHANGELOG.Blackbox  CHANGELOG.bsetbg  COMPLIANCE  ChangeLog  ChangeLog.bsetbg  CodingStyle  HACKING  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  README  README-kanux.mkd  README.CVS  README.GIT  README.MULTIHEAD  README.NLS  README.SVN  README.bbtools  README.bsetbg  README.md  TODO  aclocal.m4  bootstrap  clean  config.h.in  configure  configure.ac  configure.in  gettext.h  makedeb  track-visible-screens  version.h.in
c/: .cvsignore  Makefile.am  client.c  client.h  clientwrap.c  clientwrap.h  event.c  eventdata.c  eventdata.h  extensions.c  extensions.h  focus.c  focus.h  frame.c  frame.h  geom.h  hooks.c  hooks.h  kbind.c  kbind.h  mbind.c  mbind.h  obexport.c  obexport.h  openbox.c  openbox.h  prop.c  prop.h  python.c  python.h  screen.c  screen.h  screenwrap.c  screenwrap.h  stacking.c  stacking.h
data/: .cvsignore  Makefile.am  Makefile.in  README  README.menu  README.style  applications  applications.xsd  autostart.sh  autostart.sh.in  keys  keys.xsd  menu  menu.in  menu.xml  menu.xml.in  menu.xsd  mouse  mouse.xsd  openbox.desktop  rc-gnome.xml  rc.xml  rc.xml.in  rc.xsd  rc3  themerc.xsd
data/autostart/: autostart  autostart.in  openbox-autostart.in  openbox-xdg-autostart
data/buttons/: Makefile.am  close.xbm  fieron-bullet.xbm  fieron-bulletl.xbm  icon.xbm  max.xbm  stick.xbm
data/gnome-session/: openbox-gnome-fallback.session  openbox-gnome.session
data/gnome-wm-properties/: openbox-gnome.desktop  openbox-kde.desktop  openbox.desktop
data/styles/: Makefile.am  Makefile.in  artwiz  bbs  bluebox  cthulhain  deep  fieron  fieron2  flux  frobozz  frobust  mbdtex  miklos  nyz  nyzclone  ob20  operation  outcomes  paper  purplehaaze  shade  steelblue  steelblue2  steelblue3  the_orange  trisb  twice  warp-xp
data/xbm/: shade_toggled.xbm
data/xsession/: .svnignore  openbox-gnome  openbox-gnome-session  openbox-gnome-session.in  openbox-gnome.desktop  openbox-gnome.desktop.in  openbox-gnome.session  openbox-kde  openbox-kde-session  openbox-kde-session.in  openbox-kde.desktop  openbox-kde.desktop.in  openbox-session.in  (+2 more)
doc/: .cvsignore  .svnignore  Makefile.am  Makefile.in  bsetbg.1  bsetroot.1  obxprop.1.in  obxprop.1.sgml  openbox-gnome-session.1  openbox-gnome-session.1.in  openbox-gnome-session.1.sgml  openbox-kde-session.1  openbox-kde-session.1.in  openbox-kde-session.1.sgml  openbox-session.1  openbox-session.1.in  openbox-session.1.sgml  openbox.1  openbox.1.in  openbox.1.sgml  rc-mouse-focus.xml  themerc.txt  xftlsfonts.1
glft/: .cvsignore  Makefile.am  debug.c  debug.h  font.c  font.h  glft.h  init.c  init.h  render.c  render.h  test.c
nls/: .cvsignore  Makefile.am  Makefile.in  convert.awk
openbox/: .cvsignore  Makefile.am  action.c  action.h  action_filter.c  action_filter.h  action_list.c  action_list.h  action_list_run.c  action_list_run.h  action_parser.c  action_parser.h  action_value.c  action_value.h  actions.c  actions.h  actions_list.c  actions_list.h  actions_parser.c  actions_parser.h  actions_value.c  actions_value.h  apps_menu.c  apps_menu.h  client.c  client.h  client_list_combined_menu.c  client_list_combined_menu.h  client_list_menu.c  client_list_menu.h  client_menu.c  client_menu.h  client_set.c  client_set.h  client_time_heap.c  client_time_heap.h  clientwrap.c  composite.c  composite.h  config.c  (+126 more)
otk/: .cvsignore  Makefile.am  TODO  application.cc  application.hh  appwidget.cc  appwidget.hh  assassin.hh  basewidget.cc  basewidget.hh  button.cc  button.hh  color.cc  color.hh  configuration.cc  configuration.hh  display.cc  display.hh  eventdispatcher.cc  eventdispatcher.hh  eventhandler.cc  eventhandler.hh  focuslabel.cc  focuslabel.hh  focuswidget.cc  focuswidget.hh  font.cc  font.hh  gccache.cc  gccache.hh  image.cc  image.hh  imagecontrol.cc  label.cc  label.hh  messagedialog.cc  messagedialog.hh  otk.cc  otk.hh  otk.i  (+45 more)
parser/: .cvsignore  Makefile  Makefile.am  obparser-3.0.pc.in  parse.c  parse.h
plugins/: .cvsignore  Makefile.am  focus.c  interface.h  obconf_interface.h  resistance.c
render/: .cvsignore  Makefile  Makefile.am  button.c  color.c  color.h  font.c  font.h  geom.h  gradient.c  gradient.h  icon.h  image.c  image.h  imagecache.c  imagecache.h  instance.c  instance.h  mask.c  mask.h  obrender-3.0.pc.in  obrender-3.4.pc.in  obrender-4.0.pc.in  render.c  render.h  test.c  theme.c  theme.h  version.h.in
render2/: .cvsignore  Makefile.am  color.c  color.h  debug.c  debug.h  font.c  font.h  init.c  instance.c  instance.h  paint.c  planar.c  planar.h  render.h  surface.c  surface.h  test.c  texture.c  texture.h  theme.c  theme.h
scripts/: Makefile.am  behavior.py  builtins.py  callbacks.py  clicks.py  clientmotion.py  config.py  cycle.py  defaults.py  focus.py  focuscycle.py  focusmodel.py  globals.py  historyplacement.py  motion.py  stackedcycle.py  windowplacement.py
src/: .cvsignore  BaseDisplay.cc  BaseDisplay.h  BaseDisplay.hh  Basemenu.cc  Basemenu.h  Basemenu.hh  Clientmenu.cc  Clientmenu.h  Clientmenu.hh  Color.cc  Configmenu.cc  Configmenu.h  Configmenu.hh  Configuration.cc  Configuration.hh  Font.cc  Font.hh  GCCache.cc  GCCache.hh  Geometry.cc  Geometry.h  Iconmenu.cc  Iconmenu.h  Iconmenu.hh  Image.cc  Image.h  Image.hh  ImageControl.cc  Input.cc  Input.hh  LinkedList.cc  LinkedList.h  Makefile.am  Makefile.in  Netizen.cc  Netizen.h  Netizen.hh  Pipemenu.cc  Pipemenu.hh  (+115 more)
themes/: Makefile.am  ebox  fieron2  the_orange  twice
util/: .cvsignore  Makefile.am  Makefile.in  bsetbg  bsetroot.cc  bsetroot.h  bsetroot.hh  xftlsfonts.cc
wrap/: .cvsignore  Makefile.am  callback.i  ob.i  ob_callback.i  ob_client.i  ob_frame.i  ob_openbox.i  ob_python.i  ob_screen.i  otk.i  otk_application.i  otk_appwidget.i  otk_button.i  otk_font.i  otk_label.i  otk_point.i  otk_property.i  otk_rect.i  otk_rendercolor.i  otk_renderstyle.i  otk_rendertexture.i  otk_size.i  otk_strut.i  otk_timer.i  otk_ustring.i  otk_widget.i  ustring.i
(+999 files in other folders)
